# Alphadocte

./: .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  CacheConfig.cpp  CacheConfig.h  Common.cpp  Common.h  Config.cpp  Config.h  PlayerCLI.cpp  SolverCLI.cpp
cmake/: defaults.cmake  install.cmake  package.cmake
data/: Makefile  fr_po_allowlist.txt  generate_list.sh
docker/debian/: Dockerfile
docker/ubuntu/: Dockerfile
include/Alphadocte/: Alphadocte.h.in  Dictionary.h  EntropyMaximizer.h  Exceptions.h  FixedSizeDictionary.h  Game.h  Hint.h  IGameRules.h  MotusGameRules.h  Solver.h  TxtDictionary.h  WordleGameRules.h
src/: CMakeLists.txt  Dictionary.cpp  EntropyMaximizer.cpp  Exceptions.cpp  FixedSizeDictionary.cpp  Game.cpp  Hint.cpp  MotusGameRules.cpp  Solver.cpp  TxtDictionary.cpp  WordleGameRules.cpp
tests/: CMakeLists.txt  DictionaryTests.cpp  EntropySolverTests.cpp  GameRulesTests.cpp  GameTests.cpp  HintTests.cpp  MainTests.cpp  SolverTests.cpp  TestDefinitions.h
tests/cli/: CacheConfigTests.cpp  CommonTests.cpp  ConfigTests.cpp
tests/data/: invalid1_wordlist.txt  invalid2_wordlist.txt  invalid3_wordlist.txt  motus_test_wordlist.txt  simple_wordlist.txt  wordle_test_wordlist.txt
tests/data/config/: cache_config.txt  copy_example_config.txt  example_config.txt  example_config_bad_entry.txt  example_config_bad_entry_comment.txt  example_config_bad_section1.txt  example_config_bad_section2.txt
tests/stubs/: DictionaryStub.cpp  DictionaryStub.h  SolverStub.cpp  SolverStub.h
